force-app/main/default/objects/DigitalProductToken__c/DigitalProductToken__c.object-meta.xml
<CustomObject>
    <label>Digital Product Token</label>
    <nameField>
        <label>Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Product Tokens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>