force-app/main/default/objects/DigitalProductToken__c/fields/DigitalProduct__c.field-meta.xml
<CustomField>
    <fullName>DigitalProduct__c</fullName>
    <label>Digital Product</label>
    <referenceTo>DigitalProduct__c</referenceTo>
    <relationshipLabel>Digital Product Tokens</relationshipLabel>
    <relationshipName>Digital_Product_Tokens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>