force-app/main/default/objects/DigitalProductToken__c/fields/ExpirtyDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirtyDate__c</fullName>
    <defaultValue>NOW() + 30</defaultValue>
    <label>Expirty Date</label>
    <type>DateTime</type>
</CustomField>