force-app/main/default/objects/DigitalProductToken__c/fields/Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Redeemed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redeemed?</label>
    <type>Checkbox</type>
</CustomField>