force-app/main/default/objects/DigitalProductToken__c/fields/TokenCode__c.field-meta.xml
<CustomField>
    <fullName>TokenCode__c</fullName>
    <label>Token Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>