force-app/main/default/objects/DigitalProductToken__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DigitalProduct__c</columns>
    <columns>Expired__c</columns>
    <columns>TokenCode__c</columns>
    <columns>Status__c</columns>
    <columns>Redeemed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>